@@ -1,3 +1,7 @@
+2019-10-22  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert (main): Fixed a bug printing both a critical and a warning message when both condition match
+
 2019-10-18  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert (main): Fixed a bug ignoring --dane without parameters
